force-app/main/default/objects/Quote/fields/Accumulation__c.field-meta.xml
<CustomField>
    <fullName>Accumulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accumulation</label>
    <referenceTo>Accumulation__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>