force-app/main/default/objects/Quote/fields/Administration_Cost__c.field-meta.xml
<CustomField>
    <fullName>Administration_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administration Cost</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Quotes (Administration Cost)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>