force-app/main/default/objects/Quote/fields/Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission__c</fullName>
    <formula>Opportunity.Agent_Commission__c</formula>
    <label>Agent Commission</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>