force-app/main/default/objects/Quote/fields/Banks_Fee_Commission__c.field-meta.xml
<CustomField>
    <fullName>Banks_Fee_Commission__c</fullName>
    <formula>Opportunity.Banks_Fee_Commission__c</formula>
    <label>Bank&apos;s Fee Commission</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>