force-app/main/default/objects/Quote/fields/City_Regency__c.field-meta.xml
<CustomField>
    <fullName>City_Regency__c</fullName>
    <formula>Risk_Name__r.Location.City__c</formula>
    <label>City/Regency</label>
    <type>Text</type>
</CustomField>