force-app/main/default/objects/Quote/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <formula>TEXT(Risk_Name__r.Class__c)</formula>
    <label>Class</label>
    <type>Text</type>
</CustomField>