force-app/main/default/objects/Quote/fields/Coverage_Group__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Group__c</fullName>
    <label>Coverage Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>