force-app/main/default/objects/Quote/fields/EQ_Zone__c.field-meta.xml
<CustomField>
    <fullName>EQ_Zone__c</fullName>
    <formula>Risk_Name__r.Eq_Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EQ Zone</label>
    <type>Text</type>
</CustomField>