force-app/main/default/objects/Quote/fields/Gross_Premium_IDR__c.field-meta.xml
<CustomField>
    <fullName>Gross_Premium_IDR__c</fullName>
    <formula>Opportunity.Amount</formula>
    <label>Gross Premium IDR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>