force-app/main/default/objects/Quote/fields/Industry_Conveyance_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Conveyance_Type__c</fullName>
    <formula>TEXT(Risk_Name__r.Industry_Conveyance_Type__c)</formula>
    <label>Industry/Conveyance Type</label>
    <type>Text</type>
</CustomField>