force-app/main/default/objects/Quote/fields/isNeedSurvey__c.field-meta.xml
<CustomField>
    <fullName>isNeedSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Survey</label>
    <type>Checkbox</type>
</CustomField>