force-app/main/default/objects/Quote/fields/N_K_R__c.field-meta.xml
<CustomField>
    <fullName>N_K_R__c</fullName>
    <formula>Risk_Name__r.N_K_R__c</formula>
    <label>N.K.R</label>
    <type>Text</type>
</CustomField>