force-app/main/default/objects/Quote/fields/Overriding_Commission__c.field-meta.xml
<CustomField>
    <fullName>Overriding_Commission__c</fullName>
    <formula>Opportunity.Overriding_Commission__c</formula>
    <label>Overriding Commission</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>