force-app/main/default/objects/Quote/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <formula>Risk_Name__r.Province__c</formula>
    <label>Province</label>
    <type>Text</type>
</CustomField>