force-app/main/default/objects/Quote/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <formula>Opportunity.Rate__c</formula>
    <label>Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>