force-app/main/default/objects/Quote/fields/Risk_Class__c.field-meta.xml
<CustomField>
    <fullName>Risk_Class__c</fullName>
    <formula>TEXT(Risk_Name__r.Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Class</label>
    <type>Text</type>
</CustomField>