force-app/main/default/objects/Quote/fields/Risk_Closing_Survey_Fee_BSP__c.field-meta.xml
<CustomField>
    <fullName>Risk_Closing_Survey_Fee_BSP__c</fullName>
    <formula>Opportunity.Insurance_Policy_Coverage__r.Risk_Closing_Survey_Fee_BSP__c</formula>
    <label>Risk/Closing Survey Fee / BSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>