force-app/main/default/objects/Quote/fields/Risk_Name__c.field-meta.xml
<CustomField>
    <fullName>Risk_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Name</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>