force-app/main/default/objects/Quote/fields/Share_Accepted_Approved__c.field-meta.xml
<CustomField>
    <fullName>Share_Accepted_Approved__c</fullName>
    <formula>Opportunity.Share_Accepted_Approved__c</formula>
    <label>Share Accepted/Approved (%)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>