force-app/main/default/objects/Quote/fields/Share_Binding__c.field-meta.xml
<CustomField>
    <fullName>Share_Binding__c</fullName>
    <formula>Opportunity.Share_Binding__c</formula>
    <label>Share Binding (%)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>