force-app/main/default/objects/Quote/fields/Share_Offered__c.field-meta.xml
<CustomField>
    <fullName>Share_Offered__c</fullName>
    <formula>Opportunity.Share_Offered__c</formula>
    <label>Share Offered (%)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>