force-app/main/default/objects/Quote/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Approval</fullName>
                <default>true</default>
                <label>Waiting for Approval</label>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Bind</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>