force-app/main/default/objects/Quote/fields/Stamp_Duty__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stamp Duty</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>