force-app/main/default/objects/Quote/fields/The_Insured_Address__c.field-meta.xml
<CustomField>
    <fullName>The_Insured_Address__c</fullName>
    <label>The Insured Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>