force-app/main/default/objects/Quote/fields/The_Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>The_Insured_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>The Insured Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>