force-app/main/default/objects/Quote/fields/Total_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Total_Sum_Insured__c</fullName>
    <formula>Opportunity.Total_Sum_Insured__c</formula>
    <label>Total Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>