force-app/main/default/objects/Quote/fields/Treaty_Distribution_Response__c.field-meta.xml
<CustomField>
    <fullName>Treaty_Distribution_Response__c</fullName>
    <label>Treaty Distribution Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>