force-app/main/default/objects/Quote/fields/Tsunami_Zone__c.field-meta.xml
<CustomField>
    <fullName>Tsunami_Zone__c</fullName>
    <formula>Risk_Name__r.Tsunami_Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tsunami Zone</label>
    <type>Text</type>
</CustomField>