force-app/main/default/objects/Quote/fields/Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Type_Description__c</fullName>
    <formula>TEXT(Risk_Name__r.Type_Description__c)</formula>
    <label>Type Description</label>
    <type>Text</type>
</CustomField>