force-app/main/default/objects/Quote/fields/Type_Description_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Type_Description_Carrier__c</fullName>
    <formula>TEXT(Risk_Name__r.Type_Description_Carrier__c)</formula>
    <label>Type Description (Carrier)</label>
    <type>Text</type>
</CustomField>