force-app/main/default/objects/Quote/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <formula>TEXT(Risk_Name__r.Utilization__c)</formula>
    <label>Utilization</label>
    <type>Text</type>
</CustomField>