force-app/main/default/objects/Quote/fields/Volcanic_Zone__c.field-meta.xml
<CustomField>
    <fullName>Volcanic_Zone__c</fullName>
    <formula>Risk_Name__r.Volcanic_Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volcanic Zone</label>
    <type>Text</type>
</CustomField>