force-app/main/default/objects/Quote/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <formula>Risk_Name__r.Zip_Code__c</formula>
    <label>Zip Code</label>
    <type>Text</type>
</CustomField>