force-app/main/default/objects/Quote/recordTypes/Facultative.recordType-meta.xml
<RecordType>
    <fullName>Facultative</fullName>
    <active>true</active>
    <label>Facultative</label>
</RecordType>