force-app/main/default/objects/Quote/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <label>General</label>
</RecordType>